fixed flex-wrap

--- a/src/components/Year/Year.scss
+++ b/src/components/Year/Year.scss
@@ -1,21 +1,5 @@
 
 .Year {
-<<<<<<< HEAD
-    margin-top: 1rem;
-}
-
-.year-header {
-    background: rgba(0, 80, 200, 1);
-    padding: 1.5rem;
-    text-align: center;
-    font-size: 2.5rem;
-    color: white;
-    margin-bottom: 1rem
-}
-
-.year-body {
-=======
->>>>>>> de9d3ab968e2d134831171eaae89e1aa51724b48
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
